Fix checkbox align

--- a/src/Resources/public/src/scss/_c4g-brick-check.scss
+++ b/src/Resources/public/src/scss/_c4g-brick-check.scss
@@ -4,6 +4,7 @@
 
 .c4g__form-check-input {
   @extend .form-check-input;
+  margin-top: 0;
 }
 
 .c4g__form-label-multicheckbox {
